--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Landing page for natours",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "sass sass/main.scss css/style.css -w",
-    "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver watch:sass",
+    "watch:sass": "sass sass/main.scss css/style.css -w", 
+    "start": "npm-run-all  watch:sass",
     "compile:sass": "sass sass/main.scss css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
     "compress:css": "sass css/style.prefix.css css/style.css --style compressed",
