--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "watch:sass": "sass sass/main.scss css/style.css -w",
     "start": "npm-run-all  watch:sass",
     "compile:sass": "sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+    "prefix:css": "postcss  css/style.comp.css --use autoprefixer   -o  css/style.prefix.css",
     "compress:css": "sass css/style.prefix.css css/style.css --style compressed",
-    "build": "npm-run-all compile:sass prefix:css compress:css"
+    "concat:css": "cat css/style.comp.css   > css/style.concat.css",
+    "build": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "author": "Gkibra",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^10.4.19",
     "npm-run-all": "^4.1.1",
-    "postcss-cli": "^5.0.0",
     "sass": "^1.77.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss-cli": "^11.0.0"
   }
 }
